src/tui/snapshots/yaks__tui__tests__help_overlay.snap
---
source: src/tui/tests.rs
expression: "draw(&app, 72, 16)"
---
 🦬  Hairy (2)   🪒  Shaving (1)   🐑  Shorn (1)   🕒  Recent (4)   ⭐  Starr

◂ Help — keys
│ Movement
│   j / k  ↓ / ↑  Move cursor
│   d / u         Half-page down / up
│   PgDn / PgUp   Full-page down / up
│   g / G         Top / bottom
│
│ List pane
│   Tab / S-Tab   Next / previous view
│   [ / ]         Previous / next view
│   l / → / Enter Show detail pane
│   Space         Collapse / expand subtree
│   m             Mark / unmark row (multi-select)
j/k scroll · d/u page · g/G top/bottom · ?/q/Esc close
