src/tui/snapshots/yaks__tui__tests__reparent_picker_overlay.snap
---
source: src/tui/tests.rs
expression: "draw(&app, 72, 14)"
---
 🦬  Hairy (2)   🪒  Shaving (1)   🐑  Shorn (1)   🕒  Recent (4)   ⭐  Starr

◂ Reparent a1  (2 matches)
│ (clear parent — make top-level)
│ 🪒   b0 Root B shaving
│ 🐑   a2 Child A2 done
│
│
│
│
│
│
│
search:
