src/tui/snapshots/yaks__tui__tests__slaughter_refused_with_children.snap
---
source: src/tui.rs
expression: app.notification.clone().unwrap()
---
a0 has 2 children; slaughter them first
