src/tui/snapshots/yaks__tui__tests__starred_marker_and_tab_bar.snap
---
source: src/tui/tests.rs
expression: "draw(&app, 72, 14)"
---
 🦬  Hairy (2)   🪒  Shaving (1)   🐑  Shorn (1)   🕒  Recent (4)   ⭐  Starr
starred a0
 a0   p2 task     🦬  Root A                                           ⭐
   a1 p3 task     🦬  Child A1









Tab:view  j/k:move  l:detail  h:family  v:views  c/C:new  E:edit  X:del
