src/tui/snapshots/yaks__tui__tests__tree_with_ghost_family.snap
---
source: src/tui/tests.rs
expression: "draw(&app, 72, 14)"
---
 🦬  Hairy (2)   🪒  Shaving (1)   🐑  Shorn (1)   🕒  Recent (4)   ⭐  Starr

 a0   p2 task     🦬  Root A
   a1 p3 task     🦬  Child A1
   a2 p3 task     🐑  Child A2 done








Tab:view  j/k:move  l:detail  h:family  v:views  c/C:new  E:edit  X:del
